// Copyright 2021 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Shield 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.

syntax = "proto3";

package io.harness.delegate;

import "920-delegate-service-beans/src/main/proto/io/harness/delegate/setup_infra.proto";

option java_multiple_files = true;
option go_package = "920_delegate_service_beans";

message Execution {
  oneof executionParams {
    K8sExecute k8sExecute = 1;
    // VMExecute
  }
  string infraRef = 2;
}
message K8sExecute {
  RunConfig taskData = 1;
  K8sInfraSpec infraSpec = 2;  // set this for the task didn't initialize execution infra. Make sure there is only one task container in it
}

message RunConfig {
  bytes data = 1;
}